<resources>
    <string name="app_name">MAD_MANIPIS_ACTIVITY2</string>
    <string name="_1_x">1/X</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="debayd">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="exponent">^</string>
    <string name="x">xⁿ</string>
    <string name="sqaure">x²</string>
    <string name="multi">*</string>
    <string name="percent">%</string>
    <string name="erisa">C</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
</resources>